--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Krushnakant Moundekar</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Teainer / Jr. Software Tester</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Trainer / Jr. Software Tester</span></p>
                         <p><span class="title-s">Email: </span> <span>krushnakantmoundekar@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>+91 7387644385</span></p>
                       </div>
